--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "tabby-ai-assistant",
-    "version": "1.0.19",
-    "description": "Tabby终端AI助手插件 - 支持多AI提供商（OpenAI、Anthropic、Minimax、GLM、Ollama、vLLM）",
+    "version": "1.0.31",
+    "description": "Tabby终端AI助手插件 - 支持多AI提供商（OpenAI、Anthropic、Minimax、GLM、Ollama、vLLM）和MCP服务器",
     "main": "dist/index.js",
     "typings": "dist/index.d.ts",
     "readme": "README.md",
@@ -21,7 +21,9 @@
         "anthropic",
         "minimax",
         "glm",
-        "chatglm"
+        "chatglm",
+        "mcp",
+        "model-context-protocol"
     ],
     "author": "Mr.zhang",
     "license": "MIT",
