feat: 修复 sidebar 布局问题并添加位置设置，美化设置页面UI
- 修复 Issue #8: sidebar 不再导致标签栏右移
- 添加 sidebar 位置设置（左/右）
- 美化 general-settings 布局
- 优化 security-settings 样式（卡片布局、按钮、模式列表）
- 统一设置页面设计规范

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "tabby-ai-assistant",
-    "version": "1.0.40",
+    "version": "1.0.42",
     "description": "Tabby终端AI助手插件 - 支持多AI提供商（OpenAI、Anthropic、Minimax、GLM、Ollama、vLLM）和MCP服务器",
     "main": "dist/index.js",
     "typings": "dist/index.d.ts",
@@ -40,9 +40,12 @@
         "@ng-bootstrap/ng-bootstrap": "~14.2.0",
         "axios": "^1.6.0",
         "crypto-js": "^4.2.0",
+        "http-proxy-agent": "^7.0.0",
+        "https-proxy-agent": "^7.0.0",
         "marked": "^4.3.0",
         "pako": "^2.1.0",
         "rxjs": "^7.8.1",
+        "socks-proxy-agent": "^8.0.0",
         "tabby-core": "*",
         "tabby-settings": "*",
         "tabby-terminal": "*",
